..F....... [ZBXNEXT-4945] fixed dialog body vertical scroll bar being displayed if window height is too small
git-svn-id: svn://svn.zabbix.com/branches/dev@89248 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBXNEXT-4945/frontends/php/styles/dark-theme.css
+++ b/ZBXNEXT-4945/frontends/php/styles/dark-theme.css
@@ -2695,7 +2695,8 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
     .overlay-dialogue.modal-code-editor .code-editor {
       position: relative;
       display: flex;
-      height: 548px;
+      height: calc(100vh - 190px);
+      max-height: 548px;
       overflow: hidden; }
       .overlay-dialogue.modal-code-editor .code-editor .line-numbers {
         margin-bottom: 5px;
